[lworld] TestArrays::test73 fails due to unexpected result

XMLWordPrintable

      Caused by: java.lang.RuntimeException: assertEquals: expected 1966 to equal 9626
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:166)
      at compiler.valhalla.inlinetypes.TestArrays.test73_verifier(TestArrays.java:1705)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: