8258412: [lworld] TestArrays::test73 fails due to unexpected result